--- a/.github/workflows/push-to-docker.yaml
+++ b/.github/workflows/push-to-docker.yaml
@@ -17,7 +17,7 @@ jobs:
         uses: docker/setup-buildx-action@v1
 
       - name: Build Docker image
-        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/ubuntu-devops:latest ${{ secrets.DOCKER_USERNAME }}/ubuntu-devops:{{ github.sha }} .
+        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/ubuntu-devops:latest .
 
   push:
     name: Push Image
