--- a/.github/workflows/push-to-docker.yaml
+++ b/.github/workflows/push-to-docker.yaml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   build:
-    name: Build Image
+    name: Build and Push
     runs-on: ubuntu-latest
 
     steps:
@@ -16,20 +16,15 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
-      - name: Build Docker image
-        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/ubuntu-devops:latest .
-
-  push:
-    name: Push Image
-    needs: build
-    runs-on: ubuntu-latest
-
-    steps:
       - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Push Docker image
-        run: docker push ${{ secrets.DOCKER_USERNAME }}/ubuntu-devops:latest
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          push: true
+          tags: ${{secrets.DOCKER_USERNAME}}/ubuntu-devops:latest
