--- a/.github/workflows/push-to-docker.yaml
+++ b/.github/workflows/push-to-docker.yaml
@@ -27,4 +27,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/ubuntu-devops:${{ github.ref_slug }}
+          tags: ${{ secrets.DOCKER_USERNAME }}/ubuntu-devops:latest
