update trivy version

--- a/.github/workflows/image-scan.yml
+++ b/.github/workflows/image-scan.yml
@@ -39,7 +39,7 @@ jobs:
           echo "image=ghcr.io/${{ github.repository }}:${REF}" >> "$GITHUB_OUTPUT"
 
       - name: Run Trivy vulnerability scanner (SARIF)
-        uses: aquasecurity/trivy-action@0
+        uses: aquasecurity/trivy-action@master
         with:
           image-ref: ${{ steps.ref.outputs.image }}
           format: sarif
@@ -54,7 +54,7 @@ jobs:
           sarif_file: trivy-results.sarif
 
       - name: Run Trivy vulnerability scanner (table)
-        uses: aquasecurity/trivy-action@0
+        uses: aquasecurity/trivy-action@master
         with:
           image-ref: ${{ steps.ref.outputs.image }}
           format: table
